<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examen</string>
    <string name="tv_calcularIMC">Calcular IMC</string>
    <string name="action_settings">Settings</string>
    <string name="tv_altura">Altura</string>
    <string name="tv_cms">cms</string>
    <string name="tv_peso">Peso</string>
    <string name="tv_kg">Kgs</string>
    <string name="b_calcular">Calcular</string>
    <string name="tv_IMC">IMC</string>
    <string name="ck_mostrar">Mostrar Clasificación</string>

</resources>
